# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh, genkernel:
  Remove unsetting of ARCH for callback and change set_kernel_arch debug to
  use print_info

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh:
  It helps to actually add the handling for the --integrated-initramfs option

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh:
  Use echo instead of print

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh:
  Add debug code for set_kernel_arch

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  Add debugging code to show ARCH when running callback
  Unset ARCH when running callback and restore afterwards

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  Move set_kernel_arch() call to after determine_real_args() so that get_KV()
  has populated the vars we need

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh:
  Change powerpc switch kernel version to 2.6.16 for if we ever uncomment it

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh,
  gen_compile.sh, genkernel:
  Add set_kernel_arch(), which maps the genkernel arch to the arch that the
  kernel expects based on the version of the kernel

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
  gen_compile.sh, gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
  gen_package.sh, genkernel:
  Get rid of the ENABLE_PEGASOS_HACKS hacks Add INTEGRATED_INITRAMFS option to
  optionally insert the generated initramfs directly into the kernel image
  Change default build order to build the kernel last to facilitate the
  INTEGRATED_INITRAMFS option Add GENZIMAGE option and change various checks
  from ENABLE_PEGASOS_HACKS to GENZIMAGE

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Argh...Changing the right line helps
