@@ -2,6 +2,9 @@
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_package.sh:
+  Spacing cleanups in gen_package.sh
+
   13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh, genkernel:
   Remove unsetting of ARCH for callback and change set_kernel_arch debug to
   use print_info
